<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorites"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_msg_notifs"
        android:icon="@drawable/ic_msg_notifs"
        android:title="@string/title_msg_notifs" />

    <item
        android:id="@+id/navigation_user_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/title_user" />
</menu>