<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.selu.ui.accueil.AccueilFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_accueil" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.selu.ui.favoris.FavorisFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favoris" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.selu.ui.ajouter_article.AjoutArticleFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_ajout_article" />

    <fragment
        android:id="@+id/navigation_msg_notifs"
        android:name="com.example.selu.ui.messages_notifications.MessagesNotificationsFragment"
        android:label="@string/title_msg_notifs"
        tools:layout="@layout/fragment_messages_notifications" />

    <fragment
        android:id="@+id/navigation_user_profile"
        android:name="com.example.selu.ui.profil.ProfilFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_profil" />

    <fragment
        android:id="@+id/mdop1"
        android:name="com.example.selu.ui.mdop.page1.Mdop1Fragment"
        android:label="Mdop 1"
        tools:layout="@layout/fragment_mdop1" />

</navigation>