<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">


    <ImageView
        android:id="@+id/flecheDeRetour1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="54dp"
        android:contentDescription="@string/fleche_de_retour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left_white_arrow" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/headline_motDePasseOublie"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/mdpo_headline"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/mdpo_page1_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/mot_de_passe_oublie_text_section1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headline_motDePasseOublie"
            app:lineHeight="24sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top">

        <EditText
            android:id="@+id/courriel_input"
            android:layout_width="275dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/round_rectangle_shape"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/inputs_icon"
            android:drawablePadding="10dp"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/adresse_courriel"
            android:inputType="textEmailAddress"
            android:letterSpacing="0.0005"
            android:paddingLeft="16dp"
            android:paddingTop="14dp"
            android:paddingRight="16dp"
            android:paddingBottom="14dp"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textAlignment="textStart"
            android:textColor="@color/primary"
            android:textColorHint="@color/primary_light"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded,TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_envoiCodeVerification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_rectangle_shape"
            android:fontFamily="@font/inter_regular"
            android:letterSpacing="0.0005"
            android:paddingLeft="55dp"
            android:paddingTop="10dp"
            android:paddingRight="55dp"
            android:paddingBottom="10dp"
            android:text="@string/envoyer"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/primary"
            android:textSize="16sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="12dp"
            app:iconGravity="textStart"
            app:iconTintMode="multiply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
