<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inscription"
    android:background="@color/green_jewel">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/nouveau"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="75sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/creez_votre_compte_selu"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/mail2"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_weight="1"
        android:background="@drawable/round_rect_shape"
        android:backgroundTint="#FFFEFE"
        android:drawableStart="@drawable/inputs_icon"
        android:drawablePadding="10dp"
        android:fontFamily="@font/inter"
        android:hint="@string/nom"
        android:inputType="text|textEmailAddress"
        android:letterSpacing="0.0005"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:text=""
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/green_jewel"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:autofillHints="" />

    <EditText
        android:id="@+id/mail3"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@drawable/round_rect_shape"
        android:backgroundTint="#FFFEFE"
        android:drawableStart="@drawable/inputs_icon"
        android:drawablePadding="10dp"
        android:fontFamily="@font/inter"
        android:hint="@string/prenom"
        android:inputType="text|textEmailAddress"
        android:letterSpacing="0.0005"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:text=""
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/green_jewel"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail2"
        android:autofillHints="" />

    <EditText
        android:id="@+id/mail4"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@drawable/round_rect_shape"
        android:backgroundTint="#FFFEFE"
        android:drawableStart="@drawable/inputs_icon"
        android:drawablePadding="10dp"
        android:fontFamily="@font/inter"
        android:hint="@string/adresse_courriel"
        android:inputType="text|textEmailAddress"
        android:letterSpacing="0.0005"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:text=""
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/green_jewel"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail3"
        android:autofillHints="" />

    <EditText
        android:id="@+id/mail5"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@drawable/round_rect_shape"
        android:backgroundTint="#FFFEFE"
        android:drawableStart="@drawable/inputs_icon"
        android:drawablePadding="10dp"
        android:fontFamily="@font/inter"
        android:hint="@string/mot_de_passe"
        android:inputType="text|textEmailAddress"
        android:letterSpacing="0.0005"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:text=""
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/green_jewel"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail4"
        android:autofillHints="" />

    <EditText
        android:id="@+id/mail6"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@drawable/round_rect_shape"
        android:backgroundTint="#FFFEFE"
        android:drawableStart="@drawable/inputs_icon"
        android:drawablePadding="10dp"
        android:fontFamily="@font/inter"
        android:hint="@string/confirmer_le_mot_de_passe"
        android:inputType="text|textEmailAddress"
        android:letterSpacing="0.0005"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:text=""
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/green_jewel"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail5"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnConnexion2"
        android:layout_width="177dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_rect_shape"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/inter"
        android:letterSpacing="0.0005"
        android:text="@string/s_inscrire"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/green_jewel"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:iconGravity="textStart"
        app:iconTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail6"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter"
        android:text="Vous détenez déjà un compte Selu?"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/createAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConnexion2" />

    <TextView
        android:id="@+id/createAccount2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-65dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/inter_bold"
        android:text="Connectez-vous"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.569" />

</androidx.constraintlayout.widget.ConstraintLayout>